--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.18
 -- see: https://github.com/sol/hpack
 
 name:           calamity
-version:        0.1.30.4
+version:        0.1.31.0
 synopsis:       A library for writing discord bots in haskell
 description:    Please see the README on GitHub at <https://github.com/simmsb/calamity#readme>
 category:       Network, Web
@@ -223,9 +223,9 @@ library
     , stm-containers >=1.1 && <2
     , text >=1.2 && <2
     , text-show >=3.8 && <4
-    , time >=1.8 && <1.12
+    , time >=1.8 && <1.13
     , tls >=1.4 && <2
-    , typerep-map ==0.3.*
+    , typerep-map >=0.3 && <0.5
     , unagi-chan ==0.4.*
     , unboxing-vector ==0.2.*
     , unordered-containers ==0.2.*
