--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.11
+resolver: lts-18.19
 
 # docker:
 #   enable: true
@@ -42,28 +42,28 @@ packages:
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 extra-deps:
+  - PyF-0.10.2.0@sha256:443b25c7d39ea5b00e9d666409ee0343a237c3946cdb68ff2fcf4b5dcbb7722e,2568
+  - aeson-2.0.2.0@sha256:bb41f39762d6f755431097ce0fa88d817108036e7f1c1ec06fd5990230860c76,6343
   - data-flags-0.0.3.4@sha256:a133f2912e0e22f03419dc89a04b1e117ff6290f1777f5b7f037f683b80ed2cf,1097
   - df1-0.4@sha256:b430ee7e0abda6ce9ef03b9fbe532a7384e6de1b4873357cc116db9f614ce398,1104
   - di-polysemy-0.2.0.0@sha256:9da81102b7e5b2782e4f7194189cde552f042c94ac875ef8f542f6620035f885,2160
-  - http-api-data-0.4.3@sha256:9607047dbbca75a989dd7e0f4d475f40f431423d805a83262aea8e32971cb142,3812
+  - http-api-data-0.4.3@sha256:40675a091bf1e1999c43d15a34447c0900427391a20cab0d233f4a21033ef0a1,3828
+  - lens-5.1@sha256:eb01fc4b1cfbad0e94c497eaf7b9f0e9b6c3dc7645c8b4597da7dc9d579f8500,14519
+  - req-3.9.2@sha256:bff3615ef8be0cf67522bcdb9737e43285f896273dd291b1c3c895d5302276ec,3551
   - stm-containers-1.2@sha256:a887f2e7692b7cf20e0b081e2d66e21076e2bd4b57016ec59c484edfa2d29397,3244
+  - OneTuple-0.3.1@sha256:a848c096c9d29e82ffdd30a9998aa2931cbccb3a1bc137539d80f6174d31603e,2262
   - di-df1-1.2.1@sha256:6be994f4d6acc4e9b498af00367d09e71fe6da42c6c2eb947ab49e19a6ba6e15,999
   - di-handle-1.0.1@sha256:642ce26cc3b166e14782fb3d3acc4a15533e1021bcd6712704531f71c9483d24,720
-  - stm-hamt-1.2.0.6@sha256:fba86ccb4b45c5706c19b0e1315ba63dcac3b5d71de945ec001ba921fae80061,3972
-  # - lens-5.0.1
-  # - data-flags-0.0.3.4@sha256:a133f2912e0e22f03419dc89a04b1e117ff6290f1777f5b7f037f683b80ed2cf,1097
-  # - df1-0.4@sha256:b430ee7e0abda6ce9ef03b9fbe532a7384e6de1b4873357cc116db9f614ce398,1104
-  # - di-polysemy-0.2.0.0@sha256:9da81102b7e5b2782e4f7194189cde552f042c94ac875ef8f542f6620035f885,2160
-  # - polysemy-1.5.0.0@sha256:7edb723e7f703fe273a40e43fe33f6e8f7659fe60759e8698def1481262d314d,6246
-  # - polysemy-plugin-0.3.0.0@sha256:22e7553d0fddb48d9484ba1c71d2ed825213fcb214866d9b502ee02bfb960cb4,3121
-  # - di-df1-1.2.1@sha256:6be994f4d6acc4e9b498af00367d09e71fe6da42c6c2eb947ab49e19a6ba6e15,999
-  # - di-handle-1.0.1@sha256:642ce26cc3b166e14782fb3d3acc4a15533e1021bcd6712704531f71c9483d24,720
-  # - http-api-data-0.4.3@sha256:31005a0514d795d38574239910fcc94810f16b2254a0d9ded7cc08bb8e211fc6,3812
-  # - generic-override-0.2.0.0@sha256:9ce04dffd616bc24cccaf425f301af9c47d086347e18429d1cf898b02398bf20,1445
-#  - git: https://github.com/polysemy-research/polysemy
-#    commit: 478c86e080f38334f7ea5b0259f900916db58c33 
-#    subdirs:
-#      - polysemy-plugin
+  - hashable-1.4.0.1@sha256:c35c9c1adc33bcfa31359e33e4c3db98305406eaa460f0e04d628f2a1de19be5,4804
+  - http-client-0.7.9@sha256:4fe29d5ed114a61de32be77858af386dbb30cda8852aff4a9e30ccc351ae3b86,5400
+  - semialign-1.2.0.1@sha256:0e179b4d3a8eff79001d374d6c91917c6221696b9620f0a4d86852fc6a9b9501,2836
+  - stm-hamt-1.2.0.7@sha256:e8ecba11580ae2ea839cc3b7a25adcce40810aa472b544728790d28804c912ee,3972
+  - text-short-0.1.4@sha256:2c4789148650fdd624b7f7cabfd28b12e4130f1905eb6e3650d4d56d7db42f23,3575
+  - time-compat-1.9.6.1@sha256:42d8f2e08e965e1718917d54ad69e1d06bd4b87d66c41dc7410f59313dba4ed1,5033
+  #  - git: https://github.com/polysemy-research/polysemy
+  #    commit: 478c86e080f38334f7ea5b0259f900916db58c33 
+  #    subdirs:
+  #      - polysemy-plugin
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
