--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -18,7 +18,7 @@ license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 tested-with:
-    GHC == 8.10.4
+    GHC == 8.10.7
 extra-source-files:
     README.md
     ChangeLog.md
@@ -182,8 +182,8 @@ library
       QuasiQuotes
   ghc-options: -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall -fno-warn-name-shadowing
   build-depends:
-      PyF >=0.9.0.2 && <0.10
-    , aeson >=1.4 && <2
+      PyF ==0.10.*
+    , aeson ==2.0.*
     , async >=2.2 && <3
     , base >=4.13 && <5
     , bytestring >=0.10 && <0.12
@@ -207,7 +207,7 @@ library
     , http-client >=0.5 && <0.8
     , http-date >=0.0.8 && <0.1
     , http-types ==0.12.*
-    , lens >=4.18 && <6
+    , lens >=5.1 && <6
     , lens-aeson >=1.1 && <2
     , megaparsec >=8 && <10
     , mime-types ==0.1.*
@@ -215,13 +215,13 @@ library
     , polysemy >=1.5 && <2
     , polysemy-plugin >=0.3 && <0.5
     , reflection >=2.1 && <3
-    , req >=3.1 && <3.10
+    , req >=3.9.2 && <3.10
     , safe-exceptions >=0.1 && <2
     , scientific ==0.3.*
     , stm >=2.5 && <3
     , stm-chans >=3.0 && <4
     , stm-containers >=1.1 && <2
-    , text >=1.2 && <2
+    , text >=1.2 && <2.1
     , text-show >=3.8 && <4
     , time >=1.8 && <1.13
     , tls >=1.4 && <2
