--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -65,6 +65,8 @@ library
       Calamity.HTTP.Reason
       Calamity.HTTP.User
       Calamity.HTTP.Webhook
+      Calamity.Interactions.Eff
+      Calamity.Interactions.View
       Calamity.Internal.AesonThings
       Calamity.Internal.BoundedStore
       Calamity.Internal.ConstructorName
@@ -121,6 +123,7 @@ library
       Calamity.Types.Snowflake
       Calamity.Types.Tellable
       Calamity.Types.Token
+      Calamity.Types.TokenEff
       Calamity.Types.Upgradeable
       Calamity.Utils
       Calamity.Utils.Colour
@@ -232,4 +235,5 @@ library
     , vector ==0.12.*
     , websockets ==0.12.*
     , x509-system >=1.6.6 && <1.7
+    , random >=1.2 && <1.3
   default-language: Haskell2010
