--- a/bot/bot.cabal
+++ b/bot/bot.cabal
@@ -39,57 +39,4 @@ executable bot
     , di-core
     , pretty-simple
     , data-default-class
-  default-extensions:
-    NoMonomorphismRestriction
-    AllowAmbiguousTypes
-    BangPatterns
-    BinaryLiterals
-    BlockArguments
-    ConstraintKinds
-    DataKinds
-    DefaultSignatures
-    DeriveAnyClass
-    DeriveDataTypeable
-    DeriveFoldable
-    DeriveFunctor
-    DeriveGeneric
-    DeriveTraversable
-    DerivingStrategies
-    DerivingVia
-    DoAndIfThenElse
-    DuplicateRecordFields
-    EmptyDataDecls
-    ExistentialQuantification
-    FlexibleContexts
-    FlexibleInstances
-    FunctionalDependencies
-    GADTs
-    GeneralizedNewtypeDeriving
-    IncoherentInstances
-    InstanceSigs
-    KindSignatures
-    LambdaCase
-    MultiParamTypeClasses
-    MultiWayIf
-    NamedFieldPuns
-    OverloadedLabels
-    OverloadedStrings
-    PartialTypeSignatures
-    PatternGuards
-    PatternSynonyms
-    PolyKinds
-    RankNTypes
-    RecordWildCards
-    RecursiveDo
-    RoleAnnotations
-    ScopedTypeVariables
-    StandaloneDeriving
-    StrictData
-    TemplateHaskell
-    TupleSections
-    TypeApplications
-    TypeFamilies
-    TypeOperators
-    TypeSynonymInstances
-    UndecidableInstances
-    ViewPatterns
+    , text-show
