--- a/bot/bot.cabal
+++ b/bot/bot.cabal
@@ -28,7 +28,7 @@ executable bot
   ghc-options: -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall -fno-warn-name-shadowing
   build-depends:
       base                     >=4.12      && <5
-    , calamity
+    , calamity >= 0.3
     , polysemy
     , polysemy-plugin
     , text
