--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.18
+cabal-version: 2.0
 
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
@@ -226,6 +226,8 @@ library
     , stm-chans >=3.0 && <4
     , stm-containers >=1.1 && <2
     , text >=1.2 && <2.1
+    -- text 2.0 usage is blocked on generics lens,
+    -- it can be jailbroken by end users however
     , text-show >=3.8 && <4
     , time >=1.8 && <1.13
     , tls >=1.4 && <2
@@ -234,7 +236,7 @@ library
     , unboxing-vector ==0.2.*
     , unordered-containers ==0.2.*
     , vector ==0.12.*
-    , websockets ==0.12.*
+    , websockets >=0.12 && <0.13
     , x509-system >=1.6.6 && <1.7
     , random >=1.2 && <1.3
   default-language: Haskell2010
