Convert to Manual ToJSON/FromJSON, migrate to Optics

--- a/bot/bot.cabal
+++ b/bot/bot.cabal
@@ -32,7 +32,7 @@ executable bot
     , polysemy
     , polysemy-plugin
     , text
-    , lens
+    , optics
     , di-polysemy
     , di
     , df1
