--- a/calamity-commands/calamity-commands.cabal
+++ b/calamity-commands/calamity-commands.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.18
 -- see: https://github.com/sol/hpack
 
 name:           calamity-commands
-version:        0.2.0.0
+version:        0.3.0.0
 synopsis:       A library for declaring, parsing, and invoking text-input based commands
 description:    Please see the README on GitHub at <https://github.com/simmsb/calamity#readme>
 category:       Utils
@@ -104,8 +104,7 @@ library
   ghc-options: -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall -fno-warn-name-shadowing
   build-depends:
       base >=4.13 && <5
-    , generic-lens >=2.0 && <3
-    , lens >=4.18 && <6
+    , optics >=0.4.1 && <0.5
     , megaparsec >=8 && <10
     , polysemy >=1.5 && <2
     , polysemy-plugin >=0.3 && <0.5
