--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -5,7 +5,7 @@ cabal-version: 2.0
 -- see: https://github.com/sol/hpack
 
 name:           calamity
-version:        0.3.0.0
+version:        0.4.0.0
 synopsis:       A library for writing discord bots in haskell
 description:    Please see the README on GitHub at <https://github.com/simmsb/calamity#readme>
 category:       Network, Web
@@ -69,14 +69,11 @@ library
       Calamity.Interactions.Eff
       Calamity.Interactions.Utils
       Calamity.Interactions.View
-      Calamity.Internal.AesonThings
       Calamity.Internal.BoundedStore
       Calamity.Internal.ConstructorName
       Calamity.Internal.IntColour
       Calamity.Internal.LocalWriter
-      Calamity.Internal.OverriddenVia
       Calamity.Internal.RunIntoIO
-      Calamity.Internal.ShapeCoerce
       Calamity.Internal.SnowflakeMap
       Calamity.Internal.UnixTimestamp
       Calamity.Internal.Updateable
@@ -191,7 +188,7 @@ library
     , async >=2.2 && <3
     , base >=4.13 && <5
     , bytestring >=0.10 && <0.12
-    , calamity-commands ==0.2.*
+    , calamity-commands ==0.3.*
     , colour >=2.3.5 && <2.4
     , concurrent-extra ==0.7.*
     , connection >=0.2.6 && <0.4
@@ -205,14 +202,11 @@ library
     , di-polysemy ==0.2.*
     , exceptions ==0.10.*
     , focus >=1.0 && <2
-    , generic-lens >=2.0 && <3
     , hashable >=1.2 && <2
     , http-api-data >=0.4.3 && <0.5
     , http-client >=0.5 && <0.8
     , http-date >=0.0.8 && <0.1
     , http-types ==0.12.*
-    , lens >=5.1 && <6
-    , lens-aeson >=1.1.2 && <2
     , megaparsec >=8 && <10
     , mime-types ==0.1.*
     , mtl >=2.2 && <3
@@ -226,8 +220,6 @@ library
     , stm-chans >=3.0 && <4
     , stm-containers >=1.1 && <2
     , text >=1.2 && <2.1
-    -- text 2.0 usage is blocked on generics lens,
-    -- it can be jailbroken by end users however
     , text-show >=3.8 && <4
     , time >=1.8 && <1.13
     , tls >=1.4 && <2
@@ -239,4 +231,6 @@ library
     , websockets >=0.12 && <0.13
     , x509-system >=1.6.6 && <1.7
     , random >=1.2 && <1.3
+    , optics >=0.4.1 && <0.5
+    , aeson-optics >=1.2 && <2
   default-language: Haskell2010
