--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -5,7 +5,7 @@ cabal-version: 2.0
 -- see: https://github.com/sol/hpack
 
 name:           calamity
-version:        0.6.0.0
+version:        0.7.0.0
 synopsis:       A library for writing discord bots in haskell
 description:    Please see the README on GitHub at <https://github.com/simmsb/calamity#readme>
 category:       Network, Web
@@ -18,7 +18,7 @@ license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 tested-with:
-    GHC == 8.10.7, GHC == 9.2.2
+    GHC == 8.10.7, GHC == 9.2.4
 extra-source-files:
     README.md
     ChangeLog.md
@@ -84,6 +84,7 @@ library
       Calamity.Types
       Calamity.Types.LogEff
       Calamity.Types.Model
+      Calamity.Types.Model.Avatar
       Calamity.Types.Model.Channel
       Calamity.Types.Model.Channel.Attachment
       Calamity.Types.Model.Channel.ChannelType
@@ -118,6 +119,7 @@ library
       Calamity.Types.Model.Voice
       Calamity.Types.Model.Voice.VoiceRegion
       Calamity.Types.Model.Voice.VoiceState
+      Calamity.Types.CDNAsset
       Calamity.Types.Partial
       Calamity.Types.Snowflake
       Calamity.Types.Tellable
@@ -125,6 +127,7 @@ library
       Calamity.Types.TokenEff
       Calamity.Types.Upgradeable
       Calamity.Utils
+      Calamity.Utils.CDNUrl
       Calamity.Utils.Colour
       Calamity.Utils.Message
       Calamity.Utils.Permissions
