--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         name: simmsb-calamity
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix build .#calamity_all
+    - run: nix build .#calamity
     - run: nix flake check
