--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,27 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.4.0
-    - uses: cachix/install-nix-action@v20
-      with:
-        nix_path: nixpkgs=channel:nixos-unstable
-    - run: |
-        mkdir -p $HOME/.config/nix/
-        echo "substituters = https://cache.nixos.org https://hydra.iohk.io" >> $HOME/.config/nix/nix.conf
-        echo "trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=" >> $HOME/.config/nix/nix.conf
-    - uses: cachix/cachix-action@v12
-      with:
-        name: simmsb-calamity
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - name: Cache Nix dependencies
-      run: |
-        nix develop -j 4 -c echo
+    - name: Install Nix
+      uses: DeterminateSystems/nix-installer-action@v4
+    - name: Run the Magic Nix Cache
+      uses: DeterminateSystems/magic-nix-cache-action@v2
     - name: Build 🔨
-      id: build
       run: |
-        nix build -j auto -L
+        nix build .#calamity -L
     - name: Flake checks 🧪
       run: |
-        # Because 'nix flake check' is not system-aware
-        # See https://srid.ca/haskell-template/checks
-        nix run nixpkgs#sd 'systems = nixpkgs.lib.systems.flakeExposed' 'systems = [ "x86_64-linux" ]' flake.nix
-        nix flake check -L
+        nix --option sandbox false build .#check -L
