--- a/calamity/calamity.cabal
+++ b/calamity/calamity.cabal
@@ -183,19 +183,19 @@ library
     ViewPatterns
 
   ghc-options:
-    -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall
+    -funbox-strict-fields -Wall
     -fno-warn-name-shadowing
 
   build-depends:
-      aeson                 >=2.2     && <2.3
+      aeson                 >=2.1     && <2.3
     , aeson-optics          >=1.2     && <2
     , async                 >=2.2     && <3
     , base                  >=4.13    && <5
-    , bytestring            >=0.10    && <0.12
+    , bytestring            >=0.10    && <0.13
     , calamity-commands     >=0.4     && <0.5
     , colour                >=2.3.5   && <2.4
     , concurrent-extra      >=0.7     && <0.8
-    , containers            >=0.6     && <0.7
+    , containers            >=0.6     && <0.8
     , crypton-connection    >=0.2.6   && <0.4
     , crypton-x509-system   >=1.6.6   && <1.7
     , data-default-class    >=0.1     && <0.2
@@ -208,7 +208,7 @@ library
     , exceptions            >=0.10    && <0.11
     , focus                 >=1.0     && <2
     , hashable              >=1.2     && <2
-    , http-api-data         >=0.4.3   && <0.6
+    , http-api-data         >=0.4.3   && <0.7
     , http-client           >=0.5     && <0.8
     , http-date             >=0.0.8   && <0.1
     , http-types            >=0.12    && <0.13
@@ -226,15 +226,15 @@ library
     , stm                   >=2.5     && <3
     , stm-chans             >=3.0     && <4
     , stm-containers        >=1.1     && <2
-    , text                  >=1.2     && <2.1
+    , text                  >=1.2     && <2.2
     , text-show             >=3.8     && <4
-    , time                  >=1.8     && <1.13
-    , tls                   >=1.7     && <2
+    , time                  >=1.8     && <1.15
+    , tls                   >=1.7     && <3
     , typerep-map           >=0.5     && <0.7
     , unagi-chan            >=0.4     && <0.5
     , unboxing-vector       >=0.2     && <0.3
     , unordered-containers  >=0.2     && <0.3
     , vector                >=0.12    && <0.14
-    , websockets            >=0.12    && <0.13
+    , websockets            >=0.13    && <0.14
 
   default-language:   Haskell2010
